--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </a-assets>
 
         <a-nft videohandler type="nft"
-            url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
+            url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/Puckapao/test-ar-joox/main/joox-full"
             smooth="true" smoothcount="10" smoothtolerance="0.01" smooththreshold="5">
             <a-video src="#vid" position="50 150 -100" rotation="90 0 180" width="300" height="175">
             </a-video>
