test with 1st webm

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <a-scene vr-mode-ui="enabled: false;" renderer="antialias: true; alpha: true; precision: mediump;" embedded
         arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
         <a-assets>
-            <video src="mov_bbb.mp4" preload="auto" id="vid" response-type="arraybuffer" loop crossorigin
+            <video src="kiss.webm" preload="auto" id="vid" response-type="arraybuffer" loop crossorigin
                 webkit-playsinline autoplay muted playsinline></video>
         </a-assets>
 
