test webm transparency

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <a-nft videohandler type="nft"
             url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/Puckapao/test-ar-joox/main/joox-full"
             smooth="true" smoothcount="10" smoothtolerance="0.01" smooththreshold="5">
-            <a-video src="#vid" position="50 150 -100" rotation="90 0 180" width="300" height="175">
+            <a-video src="#vid" position="50 150 -100" rotation="90 0 180" width="300" height="175" transparent="true">
             </a-video>
         </a-nft>
         <a-entity camera></a-entity>
