--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
     <a-scene vr-mode-ui="enabled: false;" renderer="antialias: true; alpha: true; precision: mediump;" embedded
         arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
         <a-assets>
-            <video src="kiss.webm" preload="auto" id="vid" response-type="arraybuffer" loop crossorigin
+            <video src="dvd-icon.webm" preload="auto" id="vid" response-type="arraybuffer" loop crossorigin
                 webkit-playsinline autoplay muted playsinline></video>
         </a-assets>
 
         <a-nft videohandler type="nft"
             url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/Puckapao/test-ar-joox/main/joox-full"
             smooth="true" smoothcount="10" smoothtolerance="0.01" smooththreshold="5">
-            <a-video src="#vid" position="50 150 -100" rotation="90 0 180" width="300" height="175" transparent="true">
+            <a-video src="#vid" position="50 150 -100" rotation="90 0 180" width="320" height="180" transparent="true">
             </a-video>
         </a-nft>
         <a-entity camera></a-entity>
